--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/DataPlatform"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/NetIO"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
