--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.1</version>
         <configuration>
-          <source/>
-          <target/>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
     </plugins>
@@ -40,6 +40,11 @@
 		<groupId>net</groupId>
 		<artifactId>NetIO</artifactId>
 		<version>0.0.1</version>
+	</dependency>
+	<dependency>
+		<groupId>com.google.protobuf</groupId>
+		<artifactId>protobuf-java</artifactId>
+		<version>2.6.1</version>
 	</dependency>
   </dependencies>
 </project>
