--- a/pom.xml
+++ b/pom.xml
@@ -46,5 +46,10 @@
 		<artifactId>protobuf-java</artifactId>
 		<version>2.6.1</version>
 	</dependency>
+	<dependency>
+		<groupId>joda-time</groupId>
+		<artifactId>joda-time</artifactId>
+		<version>2.3</version>
+	</dependency>
   </dependencies>
 </project>
